[package]
name = "blog_os"
version = "0.1.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"

# profile used for `cargo build`
[profile.dev]
panic = "abort"  # disable stack unwinding on panic

# profile used for `cargo build --release`
[profile.release]
panic = "abort"  # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
