[package]
name = "blog_os"
version = "0.1.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"

# profile used for `cargo build`
[profile.dev]
panic = "abort"  # disable stack unwinding on panic

# profile used for `cargo build --release`
[profile.release]
panic = "abort"  # disable stack unwinding on panic

[target.'cfg(target_os="non")']
runner = "bootimage runner"

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
volatile = "0.2.6"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]